--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <header>
             <h1>Dhruvpuru.GitHub.io</h1>
             <p></p>
-            <p class="view"><a href="http://dhruvpuru.github.io/html/index.html">View My Photos </a></p>
+            <p class="view"><a href="http://dhruvpuru.github.io/html/slideshow.html">View My Photos </a></p>
             <p class="view"><a href="https://github.com/DhruvPuru">My GitHub</a></p>
 
         </header>
