--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Dhruvpuru.GitHub.io</h1>
+            <h1>Dhruv Purushottam</h1>
             <p></p>
-            <p class="view"><a href="http://dhruvpuru.github.io/html/slideshow.html">View My Photos </a></p>
+            <p class="view"><a href="http://dhruvpuru.github.io/html/slideshow.html">View My Photos</a></p>
             <p class="view"><a href="https://github.com/DhruvPuru">My GitHub</a></p>
 
         </header>
@@ -28,7 +28,5 @@
         </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-
 </body>
-
 </html>
